Fix filter buttons so they wrap on small screens

--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -1,15 +1,16 @@
 .filter-tabs {
-  display: flex;
-  justify-content: flex-start;
+  // display: flex;
+  // justify-content: flex-start;
   margin-left: 10px;
 }
 
 .filter-tabs {
   .tab {
-    flex: 0 0 auto;
+    // flex: 0 0 auto;
 
     padding: 5px 10px;
     margin-right: 5px;
+    margin-top: 5px;
     border-radius: 25px;
 
     color: $gray-dark;
